syntax = "proto3";

option csharp_namespace = "Protogame.Editor.Grpc.Editor";

service MenuEntries {
  rpc GetMenuItems(GetMenuItemsRequest) returns (GetMenuItemsResponse);
}

message GetMenuItemsRequest {
}

message GetMenuItemsResponse {
  repeated MenuItem menuItems = 1;
}

message MenuItem {
  int64 id = 1;
  int64 order = 2;
  string text = 3;
  bool enabled = 4;
}

service Console {
  rpc LogDebug(LogRequest) returns (LogResponse);
  rpc LogInfo(LogRequest) returns (LogResponse);
  rpc LogWarn(LogRequest) returns (LogResponse);
  rpc LogError(LogRequest) returns (LogResponse);
}

message LogRequest {
  string message = 1;
}

message LogResponse {
}